--- a/OneDrive - Sheffield Hallam University/Individual Project 2nd Semester/web app/website code/index.html
+++ b/OneDrive - Sheffield Hallam University/Individual Project 2nd Semester/web app/website code/index.html
@@ -7,6 +7,7 @@
     <title>Cantor College Home</title>
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 768px)">
+    <link rel="stylesheet" href="css/styles.css" >
 </head>
 <body>
     <div class="container">
