--- a/OneDrive - Sheffield Hallam University/Individual Project 2nd Semester/web app/website code/index.html
+++ b/OneDrive - Sheffield Hallam University/Individual Project 2nd Semester/web app/website code/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cantor College Home</title>
-    <link rel="stylesheet" href="css/mobile.css">
-    <link rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 768px)">
-    <link rel="stylesheet" href="css/styles.css" >
+    <link rel="stylesheet" href="css-code/mobile.css">
+    <link rel="stylesheet" href="css-code/desktop.css" media="screen and (min-width: 768px)">
+    <link rel="stylesheet" href="css-code/styles.css">
 </head>
 <body>
     <div class="container">
